--- a/src/Frontend/Card/Card.css
+++ b/src/Frontend/Card/Card.css
@@ -7,7 +7,8 @@ body{
     margin-bottom: 20px;
 }
 .content{
-    border: 2px solid #1e1c2175;
+    border-top: 2px solid #1e1c21;
+    border-bottom:2px solid #1e1c21;
     background-color: #FAFAFF;
     height: 135px;
     overflow: hidden;
