--- a/src/Frontend/Card/Card.css
+++ b/src/Frontend/Card/Card.css
@@ -2,6 +2,9 @@ body{
     background-color: #FAFAFF;
     color: #1E1C21;
 }
+a{
+    color: #1E1C21;
+}
 #card{
     width: 250px;
     margin-bottom: 20px;
@@ -17,8 +20,8 @@ body{
 #title{
     text-align: center;
     font-size: 30px;
-    border-radius: 90%;
     margin: 5px 0;
+    
 }
 
 #break{
