--- a/src/Frontend/Card/Card.css
+++ b/src/Frontend/Card/Card.css
@@ -2,14 +2,12 @@ body{
     background-color: #FAFAFF;
     color: #1E1C21;
 }
-a{
-    color: #1E1C21;
-}
-#card{
+
+#grid-card{
     width: 250px;
     margin-bottom: 20px;
 }
-.content{
+#grid-content{
     border-top: 2px solid #1e1c21;
     border-bottom:2px solid #1e1c21;
     background-color: #FAFAFF;
@@ -17,14 +15,16 @@ a{
     overflow: hidden;
 }
 
-#title{
+#grid-title{
     text-align: center;
     font-size: 30px;
     margin: 5px 0;
-    
+    a{
+        color: #1E1C21;
+    }
 }
 
-#break{
+#grid-break{
     background-color: #BF211E;
     height: 3px;
     width: 80%;
@@ -32,12 +32,12 @@ a{
     
 }
 
-#description{
+#grid-description{
     font-size: 20px;
     padding: 0 5px;
 }
 
-#date{
+#grid-date{
     background-color: #FAFAFF;
     font-size: larger;
     width: 35%;
