Minor UI changes

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,7 @@
     --white: #FAFAFF;
 }
 a{
+    color: var(--white);
     transition: 0.25s;
     text-decoration: none;
-}
-a:hover{
-    opacity: 0.5;
 }
