--- a/src/Frontend/Card/Card.css
+++ b/src/Frontend/Card/Card.css
@@ -8,6 +8,7 @@ body{
 #grid-card{
     width: 250px;
     margin-bottom: 20px;
+    
 }
 #grid-content{
     border-top: 2px solid  var(--white);
@@ -23,6 +24,9 @@ body{
     margin: 5px 0;
     a{
         color:  var(--white);
+    }
+    a:hover{
+        color: rgba(250, 250, 255, 0.5)
     }
 }
 
