--- a/src/Frontend/Footer/Footer.css
+++ b/src/Frontend/Footer/Footer.css
@@ -6,5 +6,10 @@ footer{
     background-color: var(--black);
     width: 100%;
     text-align: center;
-    padding-bottom: 10px;
+    padding: 10px 0px;
+    
+    a:hover{
+        opacity: 0.5;
+    }
+    
 }
