--- a/src/Frontend/Navigation/Navigation.css
+++ b/src/Frontend/Navigation/Navigation.css
@@ -20,9 +20,11 @@ body{
         font-size: 25px;
         text-decoration: none;
     }
-    
     a:not(:last-child){
         border-right: 2px solid var(--white);
+    }
+    a:hover{
+        color: rgba(250, 250, 255, 0.5)
     }
 }
 .navigation{
