--- a/src/Frontend/Button/Button.css
+++ b/src/Frontend/Button/Button.css
@@ -1,13 +1,14 @@
 @import "../../App.css"; 
 button{
     border: none;
-    padding: 8px 13px;
-    font-size: 18px;
+    padding: 5px 20px;
+    font-size: 15px;
     background-color: var(--yellow);
     color: var(--black);
     transition: 0.25s;
     border-radius: 5px;
     margin: 5px;
+    width: auto;
 }
 button:hover{
     opacity: 0.70;
