--- a/src/Frontend/Card/Card.css
+++ b/src/Frontend/Card/Card.css
@@ -26,7 +26,7 @@ body{
         color:  var(--white);
     }
     a:hover{
-        color: rgba(250, 250, 255, 0.5)
+        color: rgba(250, 250, 255, 0.5);
     }
 }
 
