--- a/src/Frontend/Navigation/Navigation.css
+++ b/src/Frontend/Navigation/Navigation.css
@@ -2,18 +2,20 @@
 body{
     padding: 0;
     margin: 0;
+    margin-bottom: 75px;
     font-family:'Andale Mono', monospace;
 }
 .links{
-    background-color:  var(--black);
+    background-color: var(--black);
     padding: 10px;
+    padding-bottom: 20px;
     text-align: right;
     margin-bottom: 20px;
     position: fixed;
     top: 0;
     right: 0;
     width: 100%;
-    
+    z-index: 100;
     a{
         color: var(--white);
         padding: 0px 20px;
