--- a/src/Frontend/SocialMedia/AddSocialMedia.css
+++ b/src/Frontend/SocialMedia/AddSocialMedia.css
@@ -2,9 +2,16 @@
 
 
 #allSocials{
-    text-align: start;
-    font-size: 15px;
+    text-align: left;
+    font-size: 17px;
 }
+
+#singleSocial{
+    display: flex;
+    align-items:normal;
+    margin-bottom: 5px;
+}
+
 input[type=text]{
     height: 20px;
     width: 300px;
@@ -19,7 +26,25 @@ input[type=text]{
 input[type=text]:focus{
     outline: none;
 }
+input[type=password]{
+    height: 20px;
+    width: 300px;
+    border: none;
+    font-size: 15px;
+    border-bottom: 2px var(--yellow) solid;
+    margin: 5px;
+    background-color: var(--black);
+    color: var(--white);
+} 
 
+input[type=password]:focus{
+    outline: none;
+}
+
+#passwordForm{
+   text-align: center;
+   margin-top: 150px;
+}
 .checkbox{
     appearance: none;
     background-color: var(--white);
@@ -27,6 +52,7 @@ input[type=text]:focus{
     height: 15px;
     width: 15px;
     transition: 0.25s;
+    margin: 3px;
 }
 
 .checkbox:hover {
@@ -43,4 +69,8 @@ input[type=text]:focus{
 	color: var(--black);
     position: relative;
     top: -5px;
+}
+
+#urlBox{
+    margin: 0;
 }
